# fdFLIM-py

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
examples/: example1.py
fdflim/: __init__.py  reference.py  sample.py  util.py
test/: test.py
tests/: test_loadfile.py
tests/testdata/: readme.md
